# fxcalc

./: AUTHORS  CALCDigitBox.h  CALCHelp.h  CALCLabel.cpp  CALCList.cpp  CALCList.h  CALCStatBox.cpp  CALCWindow.cpp  CALCWindow.h  CALCdefs.h  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  bootstrap.sh  configure.ac  configure.in  mkinstalldirs
doubledouble/: INSTALL  Makefile  Makefile.am  Makefile.kmb  doubledouble.cpp  doubledouble.dsp  doubledouble.h  doubledouble.html  doubledouble.vcproj  math.cpp  trydd.cpp
icons/: Makefile.am
include/: CALCButton.h  CALCDigitBox.h  CALCLabel.h  CALCList.h  CALCPrefsBox.h  CALCStatBox.h  CALCWindow.h  CALCdefs.h  CALCdefs.h.in  Makefile.am  icons.h
src/: CALCButton.cpp  CALCDigitBox.cpp  CALCLabel.cpp  CALCList.cpp  CALCPrefsBox.cpp  CALCStatBox.cpp  CALCWindow.cpp  Makefile.am  calc.cpp  icons.cpp
windows/: Makefile.am  fxcalc.dsp  fxcalc.dsw  fxcalc.res  fxcalc.sln  fxcalc.vcproj  reswrap.bat
