SUBDIRS = doubledouble include src windows

EXTRA_DIST = \
                windows/fxcalc.dsp    \
                windows/fxcalc.dsw    \
                windows/fxcalc.sln    \
                windows/fxcalc.vcproj \
                windows/fxcalc.ico    \
                windows/fxcalc.res    \
                windows/reswrap.bat
