noinst_LIBRARIES = libdoubledouble.a

libdoubledouble_a_SOURCES = \
                            inline.h         \
                            doubledouble.h   \
                            doubledouble.cpp \
                            math.cpp

EXTRA_DIST = ANNOUNCE COPYLEFT INSTALL Makefile.kmb README doubledouble.dsp doubledouble.vcproj doubledouble.html trydd.cpp
