INCLUDES = -I$(top_srcdir)/include

bin_PROGRAMS = fxcalc

fxcalc_SOURCES = \
		icons.h          \
		icons.cpp        \
		CALCdefs.h       \
		CALCHelp.h       \
		CALCDigitBox.h   \
		CALCDigitBox.cpp \
		CALCList.h       \
		CALCList.cpp     \
		CALCWindow.h     \
		CALCWindow.cpp   \
		CALCLabel.h      \
		CALCLabel.cpp    \
		CALCStatBox.h    \
		CALCStatBox.cpp  \
                calc.cpp

